Fix white space in desktop and mobile views (#85)
* Made partials for location show site

* Adds css to show page

* changed format for mobile and desktop views for location

* fixes breakpoint for mobile

--- a/app/javascript/style.scss
+++ b/app/javascript/style.scss
@@ -95,3 +95,19 @@ input.input::placeholder {
   opacity: 0.4;
   color: rgba(0, 0, 0, 1);
 }
+
+.desktop-only {
+  display: block;
+}
+.mobile-only {
+  display: none;
+}
+
+@media screen and (max-width: $tablet - 1px) {
+  .desktop-only {
+    display: none;
+  }
+  .mobile-only {
+    display: block;
+  }
+}
